form field error message ui shifting issue fix

--- a/src/styles/hookform.css
+++ b/src/styles/hookform.css
@@ -17,8 +17,19 @@
 .hookform-error {
   color: var(--error-500);
   font-size: var(--font-size-xs);
-  padding: 4px 2px;
+  padding: 0px 2px;
   font-weight: var(--font-weight);
+  position: relative;
+  animation: appearing 0.3s forwards;
+}
+
+@keyframes appearing {
+  0% {
+    bottom: 16px;
+  }
+  100% {
+    bottom: 4px;
+  }
 }
 
 .hookform-controll-container {
@@ -26,4 +37,12 @@
   flex-direction: column;
   flex: 1 1 auto;
   margin-bottom: 18px;
+  position: relative;
+}
+
+.hookform-error-container {
+  position: absolute;
+  bottom: -20px;
+  box-sizing: border-box;
+  overflow: hidden;
 }
